<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaUlubionychDan">

    <EditText
        android:id="@+id/NazwaDania"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NazwaDania"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/NazwaDania"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/MiejscezZakupuDania"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/MiejsceZakupu"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/MiejsceZakupu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NazwaDania" />


    <Button
        android:id="@+id/buttonDodajDanie"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="140dp"
        android:text="@string/ButtonDodaj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDan" />

    <Button
        android:id="@+id/buttonEdytujDanie"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/ButtonEdytuj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDan" />

    <Button
        android:id="@+id/buttonZobaczWszystkieDania"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/ButtonZobaczWszystkie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDan" />

    <Spinner
        android:id="@+id/spinnerDan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/dania"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewDan"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDan"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MiejscezZakupuDania" />


    <!-- android:onClick="zrobZdiecje"-->

    <!-- <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="5dp"
         android:src="@drawable/ic_baseline_image_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/zrobZdiecje" />-->

    <Button
        android:id="@+id/zrobZdiecje"
        android:layout_width="0dp"
        android:layout_height="60dp"


        android:text="@string/buttonZdiecjeDaniar"
        app:layout_constraintBottom_toBottomOf="@+id/viewFinder"
        app:layout_constraintEnd_toEndOf="@+id/viewFinder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonDodajDanie" />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDodajDanie" />


</androidx.constraintlayout.widget.ConstraintLayout>